# Ai_n_DataScience

./: .env.example  README.md  poetry.txt  pratice.py  pyproject.toml
01-Git-n-Gihtub/: README.md  index.html
02-Python-Assignments/Assignment-1/Conditional-Statements/: Question05.py  Question08.py  Question14.py  Question18.py
02-Python-Assignments/Assignment-1/Loops/: Question04.py  Question05.py  Question10.py  Question13.py  Question14.py  Question18.py  Question19.py  Question20.py
02-Python-Assignments/Assignment-2/: readme.md
02-Python-Assignments/Assignment-2/1. Basic Function Questions/: Question3.py  Question5.py  Question6.py
02-Python-Assignments/Assignment-2/2. Intermediate Function Questions/: Question1.py  Question2.py
02-Python-Assignments/Assignment-3/: readme.md
02-Python_Assignments/Assignment_1/Conditional_Statements/: Question01.py  Question03.py  Question04.py  Question15.py  Question17.py  Question20.py
02-Python_Assignments/Assignment_1/Loops/: Question07.py  Question09.py  Question11.py  Question12.py  Question15.py  Question16.py  Question17.py
02-Python_Assignments/Assignment_2/1. Basic Function Questions/: Question1.py  Question2.py  Question3.py  Question4.py  Question6.py
02-Python_Assignments/Assignment_2/2. Intermediate Function Questions/: Question2.py  Question3.py  Question4.py  Question5.py
03-AI_Theories/: Applied Generative AI and Cloud-Native Developer.txt
03-Python_Practice/: README.html  README.md
04-FastAPI/: Assignment.py  main.py
05-FastAPI/: Assignment.py  main.py
05-FastAPI/Practice/: exceptions.py  files.py
05-FastAPI/Student-Portal/: errors.py  main.py  routes.py
05-FastAPI/Student_Portal/: main.py
05-FastAPI/Student_Portal/Classes/: files.py  (+3 more)
06-DataBase/: nosql.py  sql.py
08-OpenAI-SDK/: basic_agent.py
Python_Assignments/Assignment_1/: readme.md
Python_Assignments/Assignment_2/: readme.md
Python_Assignments/Assignment_3/: readme.md
(+17 files in other folders)
