[project]
name = "agentic-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Ghulam Mustfa",email = "mustfafsd41gm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pymongo (>=4.11.1,<5.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
